# deep_research_agent

./: README.md  main.py  pyproject.toml  research_manager.py
my_agents/: __init__.py  email_agent.py
